--- a/index.html
+++ b/index.html
@@ -7,70 +7,53 @@
     <title>Dark Glass App</title>
     
     <link rel="stylesheet" href="style.css">
-
-    <style>
-        /* Profile Layout inside the racing button */
-        .profile-container {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            padding: 0 10px;
-            width: 100%;
-            height: 100%;
-        }
-
-        .profile-pic {
-            width: 28px;
-            height: 28px;
-            border-radius: 50%;
-            border: 1px solid var(--cyan);
-            object-fit: cover;
-        }
-
-        .username-display {
-            font-size: 0.85rem;
-            font-weight: 500;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            color: var(--text);
-        }
-    </style>
 </head>
 <body>
 
     <header>
-        <div class="btn-wrapper" id="header-btn-container">
-            <button class="login-trigger" id="auth-ui-target">Login</button>
+        <div class="btn-wrapper" id="header-btn-wrap">
+            <button class="login-trigger" id="ui-target">Login</button>
         </div>
     </header>
 
     <div id="login-modal">
         <div class="auth-card">
-            <span class="close-btn" id="close-modal-btn">×</span>
+            <span class="close-btn" id="close-modal">×</span>
             <div id="auth-content">
                 <h2 id="auth-title">Welcome</h2>
                 <input type="email" placeholder="Email Address" id="email">
                 <input type="password" placeholder="Password" id="password">
                 <button class="submit-btn" id="main-btn">Enter Dimension</button>
-                <p class="toggle-link" id="auth-toggle">New explorer? <span>Register here</span></p>
+                <p class="toggle-link" id="switch-btn">New explorer? <span>Register here</span></p>
             </div>
         </div>
     </div>
 
-    <div id="app"></div>
+    <div id="app">
+        <div style="padding-top: 150px; text-align: center;">
+            <h1>Dimension Locked</h1>
+            <p>Authentication required to access the grid.</p>
+        </div>
+    </div>
 
     <script type="module">
+        // 1. Firebase Imports
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
         import { 
             getAuth, 
             signInWithEmailAndPassword, 
             createUserWithEmailAndPassword, 
-            onAuthStateChanged,
+            onAuthStateChanged, 
             signOut 
         } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-        import { getFirestore, doc, setDoc, getDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+        import { 
+            getFirestore, 
+            doc, 
+            setDoc, 
+            getDoc 
+        } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
+        // 2. Configuration
         const firebaseConfig = {
             apiKey: "AIzaSyDFHskUWiyHhZke3KT9kkOtFI_gPsKfiGo",
             authDomain: "itzhoyoo-f9f7e.firebaseapp.com",
@@ -84,96 +67,106 @@
         const auth = getAuth(app);
         const db = getFirestore(app);
 
+        // 3. UI Selectors
         const modal = document.getElementById('login-modal');
-        const authTitle = document.getElementById('auth-title');
         const mainBtn = document.getElementById('main-btn');
-        const authToggle = document.getElementById('auth-toggle');
-        const uiTarget = document.getElementById('auth-ui-target');
-        const closeBtn = document.getElementById('close-modal-btn');
-        const headerBtnWrap = document.getElementById('header-btn-container');
-
+        const uiTarget = document.getElementById('ui-target');
+        const headerBtnWrap = document.getElementById('header-btn-wrap');
+        const authTitle = document.getElementById('auth-title');
+        const switchBtn = document.getElementById('switch-btn');
+        
         let isLogin = true;
 
+        // 4. Modal & Toggle Logic
         const toggleModal = () => {
             modal.style.display = (modal.style.display === 'flex') ? 'none' : 'flex';
         };
 
-        const switchAuth = () => {
+        document.getElementById('close-modal').onclick = toggleModal;
+
+        switchBtn.onclick = () => {
             isLogin = !isLogin;
-            if(isLogin) {
-                authTitle.innerText = "Welcome";
-                mainBtn.innerText = "Enter Dimension";
-                authToggle.innerHTML = "New explorer? <span>Register here</span>";
-            } else {
-                authTitle.innerText = "Join Us";
-                mainBtn.innerText = "Create Identity";
-                authToggle.innerHTML = "Already a member? <span>Login here</span>";
-            }
+            authTitle.innerText = isLogin ? "Welcome" : "Join Us";
+            mainBtn.innerText = isLogin ? "Enter Dimension" : "Create Identity";
+            switchBtn.innerHTML = isLogin ? 
+                "New explorer? <span>Register here</span>" : 
+                "Already a member? <span>Login here</span>";
         };
 
-        // Handle Logout or Open Modal
-        headerBtnWrap.addEventListener('click', () => {
-            if (auth.currentUser) {
-                if(confirm("Exit the dimension?")) signOut(auth);
-            } else {
-                toggleModal();
-            }
-        });
-
-        closeBtn.addEventListener('click', toggleModal);
-        authToggle.addEventListener('click', switchAuth);
-
-        mainBtn.addEventListener('click', async () => {
+        // 5. Authentication Execution
+        mainBtn.onclick = async () => {
             const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
-            if (!email || !password) return alert("Credentials required.");
+
+            if(!email || !password) return alert("Fill all fields.");
 
             try {
                 if (isLogin) {
                     await signInWithEmailAndPassword(auth, email, password);
                 } else {
-                    const userCredential = await createUserWithEmailAndPassword(auth, email, password);
-                    // Extract username from email for default display
+                    const res = await createUserWithEmailAndPassword(auth, email, password);
                     const username = email.split('@')[0];
-                    await setDoc(doc(db, "explorers", userCredential.user.uid), {
+                    // Save the user identity to Firestore
+                    await setDoc(doc(db, "explorers", res.user.uid), {
                         username: username,
-                        email: email,
                         photoURL: `https://ui-avatars.com/api/?name=${username}&background=00ffff&color=000000`,
-                        created: new Date().toISOString()
+                        joined: new Date().toISOString()
                     });
                 }
                 toggleModal();
-            } catch (error) {
-                alert(error.message);
+            } catch (e) {
+                alert(e.message);
             }
-        });
+        };
 
-        // --- DYNAMIC UI UPDATER ---
+        // 6. THE FIX: Auth State Observer
+        // This watches for login/logout and updates the header button
         onAuthStateChanged(auth, async (user) => {
             if (user) {
-                // Fetch username from Firestore
-                const docRef = doc(db, "explorers", user.uid);
-                const docSnap = await getDoc(docRef);
-                let username = user.email.split('@')[0];
-                let photo = `https://ui-avatars.com/api/?name=${username}&background=00ffff&color=000000`;
+                // User is signed in - Fetch profile
+                let name = user.email.split('@')[0];
+                let pic = `https://ui-avatars.com/api/?name=${name}&background=00ffff&color=000000`;
 
-                if (docSnap.exists()) {
-                    username = docSnap.data().username;
-                    photo = docSnap.data().photoURL || photo;
+                try {
+                    const docSnap = await getDoc(doc(db, "explorers", user.uid));
+                    if (docSnap.exists()) {
+                        name = docSnap.data().username;
+                        pic = docSnap.data().photoURL;
+                    }
+                } catch (err) {
+                    console.log("Firestore fetch failed, using fallbacks.");
                 }
 
                 // Inject Profile UI into the racing button
                 uiTarget.innerHTML = `
                     <div class="profile-container">
-                        <img src="${photo}" class="profile-pic" alt="avatar">
-                        <span class="username-display">@${username}</span>
+                        <img src="${pic}" class="profile-pic" alt="avatar">
+                        <span class="username-display">@${name}</span>
                     </div>
                 `;
-                document.getElementById('app').innerHTML = `<h1>Access Granted: ${username}</h1>`;
+
+                // Update Header Click to Sign Out
+                headerBtnWrap.onclick = () => {
+                    if(confirm("Disconnect from Dimension?")) signOut(auth);
+                };
+
+                // Update Main Page
+                document.getElementById('app').innerHTML = `
+                    <div style="padding-top: 150px; text-align: center;">
+                        <h1>Access Granted</h1>
+                        <p>Welcome, @${name}. The grid is yours.</p>
+                    </div>
+                `;
             } else {
-                // Reset to Login button
-                uiTarget.innerHTML = `Login`;
-                document.getElementById('app').innerHTML = `<h1>Dimension Locked.</h1>`;
+                // User is signed out - Reset to Login Button
+                uiTarget.innerHTML = "Login";
+                headerBtnWrap.onclick = toggleModal;
+                document.getElementById('app').innerHTML = `
+                    <div style="padding-top: 150px; text-align: center;">
+                        <h1>Dimension Locked</h1>
+                        <p>Authentication required to access the grid.</p>
+                    </div>
+                `;
             }
         });
     </script>
